--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_package/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_package/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_package/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon_package/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon_package/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#7fc4db">
+    <meta name="theme-color" content="#7fc4db">
 
+    <title>El Pollo Loco</title>
 
     <script src="js/data.js"></script>
     <script src="models/drawable-object.class.js"></script>
@@ -16,6 +24,8 @@
     <script src="models/status-bar-coin.class.js"></script>
     <script src="models/status-bar-bottle.class.js"></script>
     <script src="models/status-bar-endboss.class.js"></script>
+    <script src="models/bottle.class.js"></script>
+    <script src="models/coin.class.js"></script>
     <script src="models/icon-endboss.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/air.class.js"></script>
@@ -31,12 +41,14 @@
     <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
 </head>
+
 <body onload="init()">
 
     <h1>El pollo loco</h1>
 
     <canvas id="canvas" width="720" height="480"></canvas>
 
-    
+
 </body>
+
 </html>
