--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
+    <script src="models/splash-object.class.js"></script>
     <script src="levels/level1.js"></script>
     <script src="models/world.class.js"></script>
     <script src="js/game.js"></script>
@@ -46,7 +47,22 @@
 
     <h1>El pollo loco</h1>
 
-    <canvas id="canvas" width="720" height="480"></canvas>
+    <div id="main">
+        <canvas id="canvas" width="720" height="480"></canvas>
+        <div id="utility-container">
+            <img class="d-none" id="start-screen" src="./img/9_intro_outro_screens/start/startscreen_1.png">
+            <img id="game-over-screen" src="./img/9_intro_outro_screens/game_over/game over.png">
+            <div id="nav-bar">
+                <div>
+                    <img onclick="toggleSound(this)" id="sound-icon" src="./img/sound-waves.png">
+                </div>
+                <div>
+                    <img id="info-icon" src="./img/about.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 </body>
