--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     </div>
 
     <div id="screen-rotate">
-        <img src="../img/mobile-rotation.png">
+        <img src="img/mobile-rotation.png">
     </div>
 
     <script src="js/game.js"></script>
