added sound icon

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                     <img onclick="pauseGameAndShowControls()" id="pause-button" class="d-none"
                         src="./img/icons/pause-button.png">
                 </div>
+
+                <div class="div-sound-icon-2">
+                    <img onclick="toggleSound(this)" id="sound-icon-2" class="sound-icon-clicked d-none"
+                        src="./img/icons/sound-waves.png">
+                </div>
+                
                 <div>
                     <img onclick="resumeGameAndHideControls()" id="play-button-small" class="d-none"
                         src="./img/icons/play-button-small.png">
